--- a/backend/docker/docker_files/Dockerfile
+++ b/backend/docker/docker_files/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 
 RUN set -e; \
     apt-get update ;\
-    apt-get -y install netcat ;\
+    # apt-get -y install netcat ;\
     apt-get -y install gettext ;
 
 RUN mkdir /code
